<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="291dp"
                android:layout_height="140dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_name_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/txt_name_repository"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/colorUserName"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline12" />

                <TextView
                    android:id="@+id/txt_description_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:scrollHorizontally="true"
                    android:text="@string/txt_description_repository"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toTopOf="@+id/guideline3"
                    app:layout_constraintEnd_toStartOf="@+id/guideline8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline2" />

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/star"
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="1dp"
                        android:src="@drawable/baseline_grade_black_48"
                        android:tint="@android:color/holo_orange_light"
                        app:layout_constraintBottom_toTopOf="@+id/guideline4"
                        app:layout_constraintStart_toStartOf="parent" />


                    <TextView
                        android:id="@+id/txt_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_star"
                        android:textColor="@android:color/holo_orange_light"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <ImageView
                        android:id="@+id/fork"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="1dp"
                        android:src="@drawable/branch"
                        android:tint="@android:color/holo_orange_light"
                        app:layout_constraintBottom_toTopOf="@+id/guideline4"
                        app:layout_constraintStart_toStartOf="@+id/guideline18" />


                    <TextView
                        android:id="@+id/txt_fork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_fork"
                        android:textColor="@android:color/holo_orange_dark"
                        android:textSize="16sp"
                        android:textStyle="normal" />


                </GridLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/image_autor"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:baselineAligned="false"
                    app:civ_border_color="@color/colorPrimaryDark"
                    app:civ_border_width="1dp"
                    app:civ_shadow="false"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline8"
                    app:layout_constraintTop_toTopOf="@+id/guideline12"
                    tools:srcCompat="@tools:sample/avatars" />


                <TextView
                    android:id="@+id/txt_autor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_autor"
                    android:textColor="@color/colorUserName"
                    app:layout_constraintBottom_toTopOf="@+id/guideline3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline8"
                    app:layout_constraintTop_toBottomOf="@+id/repositoryAvatarOwner" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>