<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="407dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/txt_titulo_pull"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/txt_titulo_pull"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/colorUserName"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline12" />

                <TextView
                    android:id="@+id/txt_detalle_pull"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:scrollHorizontally="true"
                    android:text="@string/txt_detalle_pull"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toTopOf="@+id/guideline3"
                    app:layout_constraintEnd_toStartOf="@+id/guideline8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline2" />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/image_autor"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="16dp"
                    app:civ_border_color="@color/colorPrimaryDark"
                    app:civ_border_width="1dp"
                    app:civ_shadow="false"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline8"
                    app:layout_constraintTop_toTopOf="@+id/guideline12"
                    tools:srcCompat="@tools:sample/avatars" />


                <TextView
                    android:id="@+id/txt_autor_pull"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_autor_pull"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/colorUserName"
                    app:layout_constraintBottom_toTopOf="@+id/guideline3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline8"
                    app:layout_constraintTop_toBottomOf="@+id/repositoryAvatarOwner" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>